--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -54,7 +54,7 @@ jobs:
       MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
       PYTHON_STATIC_ARGS: -m "not dynamic_library"
-      #CCACHE_DIR: /mount/caches/ccache/ubuntu22_x86_64_Release
+      CCACHE_DIR: /mount/caches/ccache/ubuntu22_x86_64_Release
       CCACHE_MAXSIZE: 50G
     steps:
       - name: Clone OpenVINO
@@ -149,9 +149,9 @@ jobs:
       #     restore-keys: |
       #       ${{ github.job }}-linux
 
-      # - name: Setup ccache
-      #   run: |
-      #     mkdir -p $CCACHE_DIR
+      - name: Setup ccache
+        run: |
+          mkdir -p $CCACHE_DIR
 
       - name: Get number of CPU cores
         uses: SimenB/github-actions-cpu-cores@v2
