--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -4,14 +4,6 @@
 
 add_subdirectory(snippets)
 
-set(LINKCHECKER_PY "" CACHE FILEPATH "Path to linkchecker.py for documentation check dir.")
-set(ENABLE_OPENVINO_NOTEBOOKS OFF CACHE BOOL "Build with openvino notebooks")
-set(OMZ_DOCS_DIR "" CACHE PATH "Path to open_model_zoo documentation dir.")
-set(OTE_DOCS_DIR "" CACHE PATH "Path to training_extensions documentation dir.")
-set(WORKBENCH_DOCS_DIR "" CACHE PATH "Path to workbench documentation dir.")
-set(OVMS_DOCS_DIR "" CACHE PATH "Path to model server documentation dir.")
-set(GRAPH_CSV_DIR "" CACHE PATH "Path to the folder containing csv data for rendering graphs.")
-
 function(build_docs)
     find_package(Doxygen REQUIRED dot)
     find_package(LATEX REQUIRED)
@@ -42,24 +34,11 @@ function(build_docs)
     set(SPHINX_OUTPUT "${DOCS_BUILD_DIR}/_build")
 
     # Sphinx folders, doxyrest templates and config
-    set(SPHINX_CONF_IN "${DOCS_SOURCE_DIR}/conf.py")
-    set(SPHINX_TEMPLATES_IN "${DOCS_SOURCE_DIR}/_templates")
-    set(SPHINX_TEMPLATES_OUT "${RST_OUTPUT}/_templates")
-    set(SPHINX_CONF_OUT "${RST_OUTPUT}/conf.py")
-    set(SPHINX_STATIC_IN "${DOCS_SOURCE_DIR}/_static")
-    set(SPHINX_STATIC_OUT "${RST_OUTPUT}/_static")
-    set(SPHINX_INDEX_IN "${DOCS_SOURCE_DIR}/index.rst")
-    set(SPHINX_INDEX_OUT "${RST_OUTPUT}/index.rst")
-    set(API_DOCS_IN "${DOCS_SOURCE_DIR}/api")
-    set(API_DOCS_OUT "${RST_OUTPUT}/api")
     set(DOXYREST_IN "${DOCS_SOURCE_DIR}/doxyrest")
     set(DOXYREST_OUT "${DOCS_BUILD_DIR}/doxyrest")
-    set(DOXYREST_SPHINX_IN "${DOCS_SOURCE_DIR}/doxyrest-sphinx")
-    set(DOXYREST_SPHINX_OUT "${RST_OUTPUT}/doxyrest-sphinx")
     set(DOXYREST_CONFIG_IN "${DOCS_SOURCE_DIR}/doxyrest-config.lua")
     set(DOXYREST_CONFIG_OUT "${DOCS_BUILD_DIR}/doxyrest-config.lua")
     configure_file(${DOXYREST_CONFIG_IN} ${DOXYREST_CONFIG_OUT} @ONLY)
-    configure_file(${SPHINX_CONF_IN} ${SPHINX_CONF_OUT} @ONLY)
 
     # Doxygen config
     set(DOXYFILE_SOURCE "${DOCS_SOURCE_DIR}/Doxyfile.config")
@@ -142,7 +121,7 @@ function(build_docs)
                        COMMENT "Preprocess documentation"
                        VERBATIM)
 
-    add_custom_target(doxygen_xml
+    add_custom_target(doxygen_rst
                       DEPENDS preprocess_docs
                       COMMAND ${Python3_EXECUTABLE} ${REMOVE_XML_SCRIPT} ${XML_OUTPUT}
                       COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE_BUILD}
@@ -151,40 +130,20 @@ function(build_docs)
                       VERBATIM)
 
     # Post-process docs
-    add_custom_command(TARGET doxygen_xml
+    add_custom_command(TARGET doxygen_rst
                        POST_BUILD
                        COMMAND ${Python3_EXECUTABLE} ${PREPARE_XML_SCRIPT} ${XML_OUTPUT}
                        COMMAND ${CMAKE_COMMAND} -E copy_directory ${DOXYREST_IN} ${DOXYREST_OUT}
                        COMMAND ${DOXYREST_EXECUTABLE} -c ${DOXYREST_CONFIG_OUT}
                        COMMAND ${Python3_EXECUTABLE} ${COPY_IMAGES_SCRIPT} ${XML_OUTPUT} ${RST_OUTPUT}
                        COMMAND ${Python3_EXECUTABLE} ${DOXYGEN_MAPPING_SCRIPT} ${XML_OUTPUT} ${DOCS_BUILD_DIR} ${OpenVINO_SOURCE_DIR}/../
-                       COMMAND ${CMAKE_COMMAND} -E copy ${SPHINX_INDEX_IN} ${SPHINX_INDEX_OUT}
-                       COMMAND ${CMAKE_COMMAND} -E copy_directory ${SPHINX_TEMPLATES_IN} ${SPHINX_TEMPLATES_OUT}
                        COMMAND ${CMAKE_COMMAND} -E copy_directory ${DOXYREST_IN} ${DOXYREST_OUT}
-                       COMMAND ${CMAKE_COMMAND} -E copy_directory ${DOXYREST_SPHINX_IN} ${DOXYREST_SPHINX_OUT}
-                       COMMAND ${CMAKE_COMMAND} -E copy_directory ${SPHINX_STATIC_IN} ${SPHINX_STATIC_OUT}
                        COMMENT "Prepare xml"
                        VERBATIM)
 
-    add_custom_target(sphinx_docs
-                      DEPENDS doxygen_xml
-                      COMMAND sphinx-build -q -j auto -w ${DOCS_BUILD_DIR}/sphinx.log -b html ${RST_OUTPUT} ${SPHINX_OUTPUT}
-                      WORKING_DIRECTORY ${RST_OUTPUT}
-                      VERBATIM)
-
-    set_target_properties(doxygen_xml sphinx_docs
+    set_target_properties(doxygen_rst
                           PROPERTIES FOLDER docs)
 
-
-    find_program(browser NAMES xdg-open)
-    if(browser)
-        add_custom_target(ie_docs_open
-                          COMMAND ${browser} "${SPHINX_OUTPUT}/index.html"
-                          DEPENDS sphinx_docs
-                          COMMENT "Open OpenVINO documentation"
-                          VERBATIM)
-        set_target_properties(ie_docs_open PROPERTIES FOLDER docs)
-    endif()
 endfunction()
 
 if(ENABLE_DOCS)
