--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -26,7 +26,7 @@ on:
 concurrency:
   group: ${{ github.head_ref || github.run_id }}-linux
   # cancel-in-progress: true
-
+  # empty commit 1
 jobs:
   Build:
     defaults:
