--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -25,11 +25,8 @@ on:
 
 # concurrency:
 #   group: ${{ github.head_ref || github.run_id }}-linux
-  # cancel-in-progress: true
-  # empty commit 1
-  # empty commit 2
-  # empty commit 3
-  # empty commit 4
+#   cancel-in-progress: true
+
 jobs:
   Build:
     defaults:
@@ -57,7 +54,7 @@ jobs:
       MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
       PYTHON_STATIC_ARGS: -m "not dynamic_library"
-      # CCACHE_DIR: /mount/caches/ccache/ubuntu22_x86_64_Release
+      CCACHE_DIR: /mount/caches/ccache/ubuntu22_x86_64_Release
       CCACHE_MAXSIZE: 50G
     steps:
       - name: Clone OpenVINO
@@ -152,10 +149,10 @@ jobs:
       #     restore-keys: |
       #       ${{ github.job }}-linux
 
-      # - name: Setup ccache
-      #   run: |
-      #     mkdir -p $CCACHE_DIR
-      #     echo "this is from pipeline" >> $CCACHE_DIR/testfile
+      - name: Setup ccache
+        run: |
+          mkdir -p $CCACHE_DIR
+          echo "this is from pipeline" >> $CCACHE_DIR/testfile
 
       - name: Get number of CPU cores
         uses: SimenB/github-actions-cpu-cores@v2
