--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -34,7 +34,7 @@ jobs:
         shell: bash
     runs-on: aks-linux-16-cores
     container:
-      image: akashchi/ubuntu:python_311
+      image: oxygenxo/openvinoghubuntu22:testimage
       volumes:
         - /mount/caches:/mount/caches
     env:
