--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -60,6 +60,7 @@ jobs:
     steps:
       - name: Install git
         run: |
+          apt-get update
           apt-get install -y git git-lfs
 
       - name: Clone OpenVINO
