--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -523,8 +523,17 @@ jobs:
       MODELS_PATH: ${{ github.workspace }}/testdata
       OV_TEMP: ${{ github.workspace }}/openvino_temp
       PYTHON_STATIC_ARGS: -m "not dynamic_library"
+      TEST_USER_NAME: "ga_runner"
 
     steps:
+      - name: Build Docker (${{ matrix.BUILD_TYPE }})
+        uses: actions/build_test_image@v2
+        with:
+          context: ./openvino
+          load: true
+          file: ${{ env.OPENVINO_REPO }}/.ci/openvino-onnx/Dockerfile
+          tags: openvino-onnx-ci-image:latest
+
       - name: Create Directories
         run: |
           mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
@@ -583,6 +592,14 @@ jobs:
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_onnx.txt
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_tf2.txt
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_dev.txt
+
+      - name: Create test user
+        run: |
+          export USER_GID=1000
+          export USER_GID=$USER_UID
+          groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }}
+          useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
+          su - ${{ env.TEST_USER_NAME }}
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
