--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -96,12 +96,11 @@ jobs:
           export USER_GID=$USER_UID
           groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }}
           useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
-          su - ${{ env.TEST_USER_NAME }}
+          su - ${{ env.TEST_USER_NAME }} && whoami
 
       - name: Install build dependencies
         run: |
-          su - ${{ env.TEST_USER_NAME }}
-          whoami
+          su - ${{ env.TEST_USER_NAME }} && whoami
           bash ${OPENVINO_REPO}/install_build_dependencies.sh
           apt update
           apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers
