--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -63,10 +63,7 @@ jobs:
     steps:
       - name: Create test user
         run: |
-          export USER_UID=1000
-          export USER_GID=$USER_UID
-          groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }}
-          useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
+          export USER_UID=1000 && export USER_GID=$USER_UID && groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }} && useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
           su - ${{ env.TEST_USER_NAME }} && whoami
 
       - name: Install git
