--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -527,14 +527,23 @@ jobs:
       TEST_USER_NAME: "ga_runner"
 
     steps:
+      - name: Create test user
+        run: |
+          export USER_UID=1000
+          export USER_GID=$USER_UID
+          groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }}
+          useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
+          apt-get update && apt-get install -y sudo
+          echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME
+          chmod 0440 /etc/sudoers.d/$USERNAME
+
       - name: Create Directories
         run: |
-          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+          su - ${{ env.TEST_USER_NAME }} -c "mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}"
 
       - name: Install git
         run: |
-          apt update
-          apt --assume-yes install git git-lfs
+          su - ${{ env.TEST_USER_NAME }} -c "sudo apt update && apt --assume-yes install git git-lfs"
 
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -548,8 +557,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          apt update
-          apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev
+          su - ${{ env.TEST_USER_NAME }} -c "sudo apt update && apt --assume-yes install openjdk-11-jdk libbz2-dev clang unzip libpugixml-dev libtbb-dev intel-opencl-icd ocl-icd-opencl-dev opencl-headers libsnappy-dev"
 
       - uses: actions/setup-python@v4
         with:
@@ -558,9 +566,8 @@ jobs:
       - name: Install python dependencies
         run: |
           # For Python API
-          python3 -m pip install --upgrade pip
-          python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/wheel/requirements-dev.txt
-          python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/requirements.txt
+          su - ${{ env.TEST_USER_NAME }} -c "python3 -m pip install --upgrade pip"
+          su - ${{ env.TEST_USER_NAME }} -c "python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/wheel/requirements-dev.txt ${OPENVINO_REPO}/src/bindings/python/requirements.txt"
 
           # For running Python API tests
           python3 -m pip install -r ${OPENVINO_REPO}/src/bindings/python/src/compatibility/openvino/requirements-dev.txt
@@ -585,13 +592,6 @@ jobs:
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_onnx.txt
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_tf2.txt
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_dev.txt
-
-      - name: Create test user
-        run: |
-          export USER_UID=1000
-          export USER_GID=$USER_UID
-          groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }}
-          useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
 
       - name: Download OpenVINO package
         uses: actions/download-artifact@v3
