--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -650,7 +650,7 @@ jobs:
 
       - name: Model Optimizer UT
         run: |
-          export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}:${INSTALL_DIR}/python/python3.11:$PYTHONPATH
+          su - ${{ env.TEST_USER_NAME }} -c "export PYTHONPATH=${OPENVINO_REPO}/tools/mo/:${LAYER_TESTS_INSTALL_DIR}:${INSTALL_TEST_DIR}:${INSTALL_DIR}/python/python3.11:$PYTHONPATH"
 
           # TODO: figure out why they need to be reinstalled
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_mxnet.txt
@@ -660,8 +660,7 @@ jobs:
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_tf2.txt
           python3 -m pip install -r ${OPENVINO_REPO}/tools/mo/requirements_dev.txt
 
-          source ${INSTALL_DIR}/setupvars.sh
-
+          su - ${{ env.TEST_USER_NAME }} -c "source ${INSTALL_DIR}/setupvars.sh"
           su - ${{ env.TEST_USER_NAME }} -c "python3 -m pytest -s ${INSTALL_TEST_DIR}/mo/unit_tests --junitxml=${INSTALL_TEST_DIR}/TEST-ModelOptimizer.xml"
 
       - name: PyTorch Layer Tests
