--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -533,8 +533,8 @@ jobs:
           groupadd --gid $USER_GID ${{ env.TEST_USER_NAME }}
           useradd --uid $USER_UID --gid $USER_GID -m ${{ env.TEST_USER_NAME }}
           apt-get update && apt-get install -y sudo
-          echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME
-          chmod 0440 /etc/sudoers.d/$USERNAME
+          echo ${{ env.TEST_USER_NAME }} ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/${{ env.TEST_USER_NAME }}
+          chmod 0440 /etc/sudoers.d/${{ env.TEST_USER_NAME }}
 
       - name: Create Directories
         run: |
