--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -748,8 +748,6 @@ jobs:
         shell: bash
     runs-on: ubuntu-20.04
     env:
-      OPENVINO_REPO: ${{ github.workspace }}/openvino
-      OPENVINO_CONTRIB_REPO: ${{ github.workspace }}/openvino_contrib
       INSTALL_DIR: ${{ github.workspace }}/install
       INSTALL_TEST_DIR: ${{ github.workspace }}/install/tests
       LAYER_TESTS_INSTALL_DIR: ${{ github.workspace }}/install/tests/layer_tests
@@ -798,22 +796,22 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
-          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/tools/mo/requirements_mxnet.txt
-          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/tools/mo/requirements_caffe.txt
-          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/tools/mo/requirements_kaldi.txt
-          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/tools/mo/requirements_onnx.txt
-          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/tools/mo/requirements_tf2.txt
+          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_mxnet.txt
+          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_caffe.txt
+          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_kaldi.txt
+          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_onnx.txt
+          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_tf2.txt
 
       - name: Model Optimizer UT
         run: |
-          export PYTHONPATH=${{ env.OPENVINO_REPO }}/tools/mo/:${{ env.INSTALL_DIR }}/python/python3.11:$PYTHONPATH
+          export PYTHONPATH=${{ env.INSTALL_DIR }}/tools/mo/:${{ env.INSTALL_DIR }}/python/python3.11:$PYTHONPATH
           source ${{ env.INSTALL_DIR }}/setupvars.sh
           python3 -m pytest -s ${{ env.INSTALL_TEST_DIR }}/mo/unit_tests \
               --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-ModelOptimizer.xml
 
       - name: MO Python API Tests
         run: |
-          export PYTHONPATH=${{ env.OPENVINO_REPO }}/tools/mo/:${{ env.LAYER_TESTS_INSTALL_DIR }}:$PYTHONPATH
+          export PYTHONPATH=${{ env.INSTALL_DIR }}/tools/mo/:${{ env.LAYER_TESTS_INSTALL_DIR }}:$PYTHONPATH
           source ${{ env.INSTALL_DIR }}/setupvars.sh
           python3 -m pytest ${{ env.LAYER_TESTS_INSTALL_DIR }}/mo_python_api_tests --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-test_mo_convert.xml
         env:
