--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -796,6 +796,7 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
+          python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_dev.txt
           python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_mxnet.txt
           python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_caffe.txt
           python3 -m pip install -r ${{ env.INSTALL_TEST_DIR }}/mo/requirements_kaldi.txt
