--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -293,7 +293,7 @@ jobs:
     steps:
       - name: Create Directories
         run: |
-          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }}
+          mkdir -p ${{ env.INSTALL_DIR }} ${{ env.INSTALL_TEST_DIR }} ${{ env.CONFORMANCE_ARTIFACTS_DIR }}
 
       #
       # Dependencies
@@ -320,9 +320,6 @@ jobs:
             tar -xzf openvino_tests.tar.gz -C ${{ env.INSTALL_DIR }} && rm openvino_tests.tar.gz || exit 1
           popd
 
-      - name: Check Install Directory
-        run: ls -laR ${{ env.INSTALL_DIR }}
-
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
@@ -342,17 +339,16 @@ jobs:
         uses: actions/cache/restore@v3
         id: expected_failures_cache
         with:
-          path: ${{ env.CONFORMANCE_TOOLS_DIR }}
+          path: ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/expected_failures_cpu.csv
           key: ${{ runner.os }}-conformance-${{ matrix.TEST_TYPE }}-expected-failures-${{ github.sha }}
           restore-keys: |
-            ${{ runner.os }}-conformance-${{ matrix.TEST_TYPE }}-expected-failures
+            ${{ runner.os }}-conformance-${{ matrix.TEST_TYPE }}-expected-failures-
 
       - name: Check Tools Dir
         run: ls -laR ${{ env.CONFORMANCE_TOOLS_DIR }}
 
       - name: Run Conformance Tests
         run: |
-          mkdir -p ${{ env.CONFORMANCE_ARTIFACTS_DIR }}
 
           source ${{ env.INSTALL_DIR }}/setupvars.sh
 
@@ -363,11 +359,18 @@ jobs:
 
           ls -la ${{ env.CONFORMANCE_ARTIFACTS_DIR }}
 
+      # Required due to: https://github.com/actions/cache/tree/main/restore#ensuring-proper-restores-and-save-happen-across-the-actions
+      - name: Rename Expected Failures List
+        # if: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
+        run: |
+          rm -rf ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/expected_failures_cpu.csv
+          cp ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/CPU_logs/logs/fix_priority.csv ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/expected_failures_cpu.csv
+
       - name: Upload Expected Failures List
         # if: ${{ github.ref_name == 'master' && 'true' || 'false'  }}
         uses: actions/cache/save@v3
         with:
-          path: ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/CPU_logs/logs/fix_priority.csv
+          path: ${{ env.CONFORMANCE_ARTIFACTS_DIR }}/expected_failures_cpu.csv
           key: ${{ runner.os }}-conformance-${{ matrix.TEST_TYPE }}-expected-failures-${{ github.sha }}
 
       - name: Upload Conformance Artifacts
