--- a/.github/workflows/linux_conditional_compilation.yml
+++ b/.github/workflows/linux_conditional_compilation.yml
@@ -47,6 +47,7 @@ jobs:
       CMAKE_C_COMPILER_LAUNCHER: ccache
       GITHUB_WORKSPACE: '/__w/openvino/openvino'
       OPENVINO_REPO: /__w/openvino/openvino/openvino
+      INSTALL_DIR: /__w/openvino/openvino/openvino_install
       BUILD_DIR: /__w/openvino/openvino/openvino_build
       SELECTIVE_BUILD_STAT_DIR: /__w/openvino/openvino/selective_build_stat
       MODELS_PATH: /__w/openvino/openvino/testdata
@@ -96,6 +97,20 @@ jobs:
           echo "Using pip version: ${PIP_VER}"
           echo "PIP_CACHE_DIR=${PIP_CACHE_PATH}/${PIP_VER}" >> $GITHUB_ENV
 
+      - name: Install python dependencies
+        run: |
+          # For running ONNX frontend unit tests
+          python3 -m pip install --force-reinstall -r ${OPENVINO_REPO}/src/frontends/onnx/tests/requirements.txt
+
+          # For running TensorFlow frontend unit tests
+          python3 -m pip install -r ${OPENVINO_REPO}/src/frontends/tensorflow/tests/requirements.txt
+
+          # For running TensorFlow Lite frontend unit tests
+          python3 -m pip install -r ${OPENVINO_REPO}/src/frontends/tensorflow_lite/tests/requirements.txt
+
+          # For running Paddle frontend unit tests
+          python3 -m pip install -r ${OPENVINO_REPO}/src/frontends/paddle/tests/requirements.txt
+
       #
       # Build
       #
@@ -108,6 +123,7 @@ jobs:
             -DENABLE_TESTS=ON \
             -DENABLE_CPPLINT=OFF \
             -DENABLE_NCC_STYLE=OFF \
+            -DENABLE_INTEL_GNA=OFF \
             -DCMAKE_COMPILE_WARNING_AS_ERROR=OFF \
             -DENABLE_PROFILING_ITT=ON \
             -DSELECTIVE_BUILD=COLLECT \
@@ -122,9 +138,19 @@ jobs:
       - name: Show ccache stats
         run: ccache --show-stats
 
-      # TODO
-      - name: Run unit tests
-        run: ctest -V -L UNIT
+      - name: Cmake install - OpenVINO
+        run: cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -P ${BUILD_DIR}/cmake_install.cmake
+
+      - name: Build C++ samples - OpenVINO build tree
+        run: |
+          cmake -G "${{ env.CMAKE_GENERATOR }}" -DOpenVINO_DIR=${BUILD_DIR} -S ${INSTALL_DIR}/samples/cpp -B ${BUILD_DIR}/cpp_samples
+          cmake --build ${BUILD_DIR}/cpp_samples --parallel --config ${{ env.CMAKE_BUILD_TYPE }} --target hello_query_device
+
+      - name: Build C samples - OpenVINO install tree
+        run: ${INSTALL_DIR}/samples/c/build_samples.sh -i ${INSTALL_DIR} -b ${BUILD_DIR}/c_samples
+
+      - name: Ctest - OpenVINO unit tests
+        run: ctest -C ${{ env.CMAKE_BUILD_TYPE }} --test-dir ${BUILD_DIR} -V -L UNIT
 
       - name: Perform code tracing via ITT collector
         run: |
@@ -188,9 +214,7 @@ jobs:
 
     steps:
       - name: Install git
-        run: |
-          apt-get update
-          apt-get install --assume-yes --no-install-recommends git ca-certificates git-lfs
+        run: apt-get update && apt-get install --assume-yes --no-install-recommends git ca-certificates git-lfs
 
       - name: Clone OpenVINO
         uses: actions/checkout@v4
@@ -228,13 +252,15 @@ jobs:
             -DBUILD_SHARED_LIBS=OFF \
             -DENABLE_CPPLINT=OFF \
             -DSELECTIVE_BUILD=ON \
-            -DENABLE_LTO=ON \
+            -DENABLE_LTO=OFF \
             -DSELECTIVE_BUILD_STAT=${SELECTIVE_BUILD_STAT_DIR}/*.csv \
+            -DCMAKE_C_COMPILER_LAUNCHER=${{ env.CMAKE_C_COMPILER_LAUNCHER }} \
+            -DCMAKE_CXX_COMPILER_LAUNCHER=${{ env.CMAKE_CXX_COMPILER_LAUNCHER }} \
             -S ${OPENVINO_REPO} \
             -B ${BUILD_DIR}
 
       - name: Cmake build -  CC ON
-        run: cmake --build ${BUILD_DIR} --parallel --target benchmark_app
+        run: cmake --build ${BUILD_DIR} --parallel 8 --target benchmark_app
 
       - name: Show ccache stats
         run: ccache --show-stats
@@ -252,8 +278,9 @@ jobs:
         shell: bash
     runs-on: aks-linux-8-cores
     container:
-      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:20.04
+      image: openvinogithubactions.azurecr.io/dockerhub/ubuntu:22.04
     env:
+      DEBIAN_FRONTEND: noninteractive # to prevent apt-get from waiting user input
       INSTALL_TEST_DIR: /__w/openvino/openvino/install/tests
       PARALLEL_TEST_SCRIPT: /__w/openvino/openvino/install/tests/src/tests/test_utils/functional_test_utils/layer_tests_summary/run_parallel.py
       PARALLEL_TEST_CACHE: /__w/openvino/openvino/install/tests/test_cache.lst
@@ -268,11 +295,17 @@ jobs:
           name: openvino_tests
           path: ${{ env.INSTALL_TEST_DIR }}
 
+      - name: Extract OpenVINO packages
+        run: |
+          pushd ${INSTALL_TEST_DIR}
+            tar -xvzf openvino_tests.tar.gz -C ${INSTALL_TEST_DIR} && rm openvino_tests.tar.gz || exit 1
+          popd
+
       - name: Install OpenVINO dependencies
-        run: bash ${INSTALL_TEST_DIR}/scripts/install_dependencies/install_openvino_dependencies.sh -c=core -y
+        run: bash ${INSTALL_TEST_DIR}/scripts/install_dependencies/install_openvino_dependencies.sh -c=core -c=gpu -y
 
       - name: Install 'actions/setup-python@v4' dependencies
-        run: apt-get update && apt-get install -y libssl3
+        run: apt-get install -y libssl3
 
       - uses: actions/setup-python@v4
         with:
