--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -891,11 +891,13 @@ jobs:
 
       - name: nGraph and IE Python Bindings and Python API 2.0 Tests
         run: |
-          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
           source ${INSTALL_DIR}/setupvars.sh
+          # For python imports to import 'pybind_mock_frontend'
           export PYTHONPATH=${INSTALL_TEST_DIR}:$PYTHONPATH
+          # for 'template' extension
+          export LD_LIBRARY_PATH=${INSTALL_TEST_DIR}:$LD_LIBRARY_PATH
           python3 -m pytest -n logical --dist loadfile -sv \
-            ${INSTALL_TEST_DIR}/pyngraph ${INSTALL_TEST_DIR}/pyopenvino ${{ env.PYTHON_STATIC_ARGS }} \
+            ${INSTALL_TEST_DIR}/pyngraph ${INSTALL_TEST_DIR}/pyopenvino \
             --junitxml=${INSTALL_TEST_DIR}/TEST-python_unit.xml \
             --ignore=${INSTALL_TEST_DIR}/pyngraph/tests/test_onnx/test_zoo_models.py \
             --ignore=${INSTALL_TEST_DIR}/pyngraph/tests/test_onnx/test_backend.py \
