--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -267,9 +267,13 @@ jobs:
           export SHARE=${INSTALL_TEST_DIR}/smoke_tests/samples_smoke_tests_data
 
           python3 -m pip install --ignore-installed PyYAML -r ${INSTALL_TEST_DIR}/smoke_tests/requirements.txt
-          export LD_LIBRARY_PATH=${IE_APP_PATH}:$LD_LIBRARY_PATH
+          export DYLD_LIBRARY_PATH=${IE_APP_PATH}:$DYLD_LIBRARY_PATH
 
           source ${INSTALL_DIR}/setupvars.sh
+          
+          echo "DYLD_LIBRARY_PATH: ${DYLD_LIBRARY_PATH}"
+          echo "DYLD_LIBRARY_PATH: ${DYLD_LIBRARY_PATH}"
+          echo "DYLD_LIBRARY_PATH: ${DYLD_LIBRARY_PATH}"
 
           python3 -m pytest -sv ${INSTALL_TEST_DIR}/smoke_tests \
             --env_conf ${INSTALL_TEST_DIR}/smoke_tests/env_config.yml \
@@ -556,7 +560,7 @@ jobs:
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
           export PYTHONPATH=${{ env.INSTALL_TEST_DIR }}:$PYTHONPATH
           # for 'template' extension
-          export DYLD_LIBRARY_PATH=${{ env.INSTALL_TEST_DIR }}:DYLD_LIBRARY_PATH
+          export DYLD_LIBRARY_PATH=${{ env.INSTALL_TEST_DIR }}:$DYLD_LIBRARY_PATH
 
           python3 -m pytest -sv ${{ env.INSTALL_TEST_DIR }}/pyopenvino \
             --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-Pyngraph.xml \
@@ -569,14 +573,18 @@ jobs:
         run: |
           python3 -m pip install -r ${{ env.LAYER_TESTS_INSTALL_DIR }}/requirements.txt
           export PYTHONPATH=${{ env.LAYER_TESTS_INSTALL_DIR }}:$PYTHONPATH
+          # TODO: remove setupvars.sh from here; currently, it's used for 'test_utils' installed in '<package>/python/openvino'
+          source ${INSTALL_DIR}/setupvars.sh
 
           python3 -m pytest ${{ env.LAYER_TESTS_INSTALL_DIR }}/mo_python_api_tests/ --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-test_mo_convert.xml
         env:
           TEST_DEVICE: CPU
+          TEST_PRECISION: FP16
 
-      - name: Model Optimizer UT
+      - name: Model Optimizer unit tests
         if: ${{ always() }}
         run: |
+          export PYTHONPATH=${{ env.INSTALL_TEST_DIR }}:$PYTHONPATH
           python3 -m pytest -s ${{ env.INSTALL_TEST_DIR }}/mo/unit_tests \
               --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-ModelOptimizer.xml
 
@@ -589,6 +597,7 @@ jobs:
           python3 -m pytest ${{ env.LAYER_TESTS_INSTALL_DIR }}/pytorch_tests -m precommit --junitxml=${{ env.INSTALL_TEST_DIR }}/TEST-pytorch.xml
         env:
           TEST_DEVICE: CPU
+          TEST_PRECISION: FP16
 
       - name: TensorFlow 1 Layer Tests - TF FE
         if: ${{ always() }}
